src/6D Vision Testing/Debug/6Dtool.log
  g++ -std=c++11 -MMD -IOpenCV/include -Iincl/ -c -o src/6DTool.o src/6DTool.cpp
  src/6DTool.cpp: In function 'void preprocessImages(char**)':
  src/6DTool.cpp:67:38: warning: narrowing conversion of '(moments.cv::Moments::m10 / moments.cv::Moments::m00)' from 'double' to 'int' inside { } [-Wnarrowing]
    cv::Point objectCenter{ moments.m10 / moments.m00, moments.m01 / moments.m00 };
                                        ^
  src/6DTool.cpp:67:65: warning: narrowing conversion of '(moments.cv::Moments::m01 / moments.cv::Moments::m00)' from 'double' to 'int' inside { } [-Wnarrowing]
    cv::Point objectCenter{ moments.m10 / moments.m00, moments.m01 / moments.m00 };
                                                                   ^
  g++ -std=c++11 -MMD -LOpenCV/lib -o 6DTool src/ObjectDetector.o src/6DTool.o src/PartMatcher.o -lopencv_core310 -lopencv_imgproc310 -lopencv_highgui310 -lopencv_imgcodecs310
  c:/mingw/bin/../lib/gcc/mingw32/4.9.3/../../../../mingw32/bin/ld.exe: cannot open output file 6DTool.exe: Permission denied
collect2.exe : error : ld returned 1 exit status
  Makefile:11: recipe for target '6DTool' failed
  mingw32-make: *** [6DTool] Error 1
C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V140\Microsoft.MakeFile.Targets(37,5): error MSB3073: The command "mingw32-make 6DTool" exited with code 2.
